# mini_shogi

./: .gitignore  CMakeLists.txt  README.md  main.c  t.txt  x.txt  y.txt
ai/: CMakeLists.txt
ai/game/: CMakeLists.txt
ai/game/include/: Bishop.h  Board.h  Game.h  Gold.h  King.h  Pawn.h  Piece.h  Player.h  Referee.h  Rook.h  Silver.h  leakdetect.h  list.h  utility.h
ai/game/src/: Bishop.c  Board.c  Game.c  Gold.c  King.c  Pawn.c  Piece.c  Player.c  Referee.c  Rook.c  Silver.c  leakdetect.c  list.c  pre_board.txt  utility.c
ai/include/: AI.h  Node.h  adam.h  affine.h  affine_tensor.h  convolution.h  data_generator.h  dropout.h  dropout_tensor.h  function.h  game_ai.h  gradient_check.h  list_double.h  mask.h  matrix.h  optimizer.h  relu.h  relu_tensor.h  sgd.h  sigmoid.h  tensor.h  train_value_net.h  trainer.h  util.h  value_net.h
ai/src/: AI.c  Node.c  adam.c  affine.c  affine_tensor.c  convolution.c  data_generator.c  dropout.c  dropout_tensor.c  function.c  game_ai.c  gradient_check.c  list_double.c  mask.c  matrix.c  optimizer.c  relu.c  relu_tensor.c  sgd.c  sigmoid.c  tensor.c  train_value_net.c  trainer.c  util.c  value_net.c
game/: CMakeLists.txt
game/include/: Bishop.h  Board.h  Gold.h  King.h  Pawn.h  Piece.h  Player.h  Referee.h  Rook.h  Silver.h  game.h  list.h  utility.h
game/src/: Bishop.c  Board.c  Gold.c  King.c  Pawn.c  Piece.c  Player.c  Referee.c  Rook.c  Silver.c  game.c  list.c  utility.c
